--- a/src/main/resources/templates/admin.mustache
+++ b/src/main/resources/templates/admin.mustache
@@ -20,7 +20,7 @@
         <a href="/market/stock/all"><div class="nav-button">Акции</div></a>
         <a href="/market/clients/all"><div class="nav-button">Клиенты</div></a>
         <a href="/market/holdings/all"><div class="nav-button">Владения акциями</div></a>
-        <a href=""><div class="nav-button">Помощь</div></a>
+        <a href="help/help.html"><div class="nav-button">Помощь</div></a>
     </nav>
 
     <div class="main">
